# Spotiamp

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  README.txt  app.manifest  appkey.h  audio_eq.c  audio_eq.h  audio_win32.c  build_config.h  com_ptr.h  commands.h  config.h  dialogs.h  dialogs_win32.cpp  fpu_util.h  mp3.h  resource.h  shoutcast.h  spotifyamp.cpp  spotifyamp.h  spotifyamp.rc  stdafx.h  tinfl.c  tinfl.h  types.h  util.h  vis.cpp  visplugin.cpp  visplugin.h  window.cpp  window.h  window_sdl.cpp  window_sdl.h  window_win32.cpp  window_win32.h  zipfile.cpp  zipfile.h
tiny_spotify/: LICENSE  tiny_spotify.h
winamp_sdk/: LICENSE  VIS.H  api_application.h  api_language.h  api_memmgr.h  api_service.h  api_syscb.h  dispatch.h  guid.h  ifc_messageprocessor.h  lang.h  nsguid.h  resource.h  types.h  waservicefactory.h
